--- a/home.html
+++ b/home.html
@@ -14,7 +14,9 @@
 
     <div class="pannel">
       <div class="pannel_c">
-        <a href="#">Bénéficiaires</a>
+        <a class="switchBtn" href="1">Bénéficiaires</a>
+        <a class="switchBtn" href="2">Affections</a>
+        <a class="switchBtn" href="3">Préstation</a>
       </div>
     </div>
 
@@ -27,205 +29,8 @@
           <i class="fa-solid fa-magnifying-glass"></i>
         </div>
 
-        <!-- FORM POUR AJOUTER UN BENEFICIARE -->
-        <div class="form_c">
-          <h2>Ajouter un bénéciare</h2>
-          <form action="#" method="POST" id="form_add_benef">
-
-            <div class="form_c_row_1">
-              <div class="form_input_c">
-                <label for="nir">NIR</label>
-                <input id="nir" name="nir" type="text" placeholder="EX : AZSDRFFVBGKLPMDFC">
-                <p>Le NIR n'est pas correct, ou déjà existant</p>
-              </div>
-            </div>
-
-            <div class="form_c_row_2">
-              <div class="form_input_c">
-                <label for="annee_n">Année de naissance</label>
-                <select name="annee_n" id="annee_n"></select>
-                <p>L'année de naissance n'est pas correct</p>
-              </div>
-              <div class="form_input_c">
-                <label for="dep">Département de résidence</label>
-                <input id="dep" type="text" placeholder="Ex: Essone ...">
-                <p>Le département de résidence n'est pas correct</p>
-              </div>
-            </div>
-
-            <div class="form_c_row_1">
-              <div class="form_input_c">
-                <label for="sexe">Sexe</label>
-                <select name="sexe" id="sexe">
-                  <option value="0">Homme</option>
-                  <option value="1">Femme</option>
-                </select>
-              </div>
-            </div>
-
-            <div class="form_c_row_2">
-              <div class="form_input_c">
-                <label for="annee_d">Année de décès du bénéficiaure</label>
-                <select name="annee_d" id="annee_d"></select>
-              </div>
-              <div class="form_input_c">
-                <label for="mois_d">Mois de décès</label>
-                <select name="mois_d" id="mois_d">
-                  <option value="janvier">Janvier</option>
-                  <option value="fevrier">Février</option>
-                  <option value="mars">Mars</option>
-                  <option value="avril">Avril</option>
-                  <option value="mai">Mai</option>
-                  <option value="juin">Juin</option>
-                  <option value="juillet">Juillet</option>
-                  <option value="aout">Août</option>
-                  <option value="septembre">Septembre</option>
-                  <option value="octobre">Octobre</option>
-                  <option value="novembre">Novembre</option>
-                  <option value="decembre">Décembre</option>
-                </select>
-              </div>
-            </div>
-
-            <div class="form_c_button">
-              <button>Ajouter</button>
-            </div>
-
-          </form>
-        </div>
-
-        <!-- FORM POUR AJOUTER UNE AFFECTION -->
-        <div class="form_c">
-          <h2>Ajouter une affection au bénéficiare : nom</h2>
-          <form action="#" method="POST" id="form_add_affect">
-
-            <div class="form_c_row_1">
-              <div class="form_input_c">
-                <label for="nir">NIR<span>*</span></label>
-                <input id="nir" name="nir" type="text" placeholder="EX : CCFDRDERDFCVFVGFRSS" readonly disabled>
-                <p>Le NIR n'est pas correct, ou déjà existant</p>
-              </div>
-            </div>
-
-            <div class="form_c_row_1">
-              <div class="form_input_c">
-                <label for="nir">N ALD<span>*</span></label>
-                <input id="ald" name="ald" type="number" placeholder="EX : 22398576">
-                <p>Le numéro ALD n'est pas correct</p>
-              </div>
-            </div>
-
-            <div class="form_c_row_2">
-              <div class="form_input_c">
-                <label for="date_d">Date de début ALD ou MP<span>*</span></label>
-                <input id="date_d" name="date_d" type="date">
-                <p>la date du debut ALD ou MP n'est pas correct</p>
-              </div>
-              <div class="form_input_c">
-                <label for="date_f">Date de fin ALD ou MP<span>*</span></label>
-                <input id="date_f" name="date_f" type="date">
-                <p>la date de fin ALD ou MP n'est pas correct</p>
-              </div>
-            </div>
-
-            <div class="form_c_row_2">
-              <div class="form_input_c">
-                <label for="motif_e">Motif exonération du bénéficiaire<span>*</span></label>
-                <input id="motif_e" name="motif_e" type="number" placeholder="EX : 23456789" readonly>
-                <p>Motif exonération n'est pas correct</p>
-              </div>
-              <div class="form_input_c">
-                <label for="motif_m">Motif médical ou pathologie (code CIM10)<span>*</span></label>
-                <input id="motif_m" name="motif_m" type="text" placeholder="EX : EfGjD" readonly>
-                <p>Motif médical n'est pas correct</p>
-              </div>
-            </div>
-
-            <div class="form_c_button">
-              <button>Ajouter</button>
-            </div>
-
-          </form>
-        </div>
-
-        <!-- FORM POUR AJOUTER UNE PRESTATION -->
-        <div class="form_c">
-          <h2>Ajouter une prestation au bénéficiare : nom</h2>
-          <form action="#" method="POST" id="form_add_pres">
-
-            <div class="form_c_row_1">
-              <div class="form_input_c">
-                <label for="nir">NIR<span>*</span></label>
-                <input id="nir" name="nir" type="text" placeholder="EX : CCFDRDERDFCVFVGFRSS" readonly disabled>
-                <p>Le NIR n'est pas correct, ou déjà existant</p>
-              </div>
-            </div>
-
-            <div class="form_c_row_2">
-              <div class="form_input_c">
-                <label for="date_e">Date de début d'exécution des soins<span>*</span></label>
-                <input id="date_e" name="date_e" type="date">
-                <p>la date de debut d'exécution soins n'est pas correct</p>
-              </div>
-              <div class="form_input_c">
-                <label for="date_f_s">Date de fin d'exécution des soins<span>*</span></label>
-                <input id="date_f_s" name="date_f_s" type="date">
-                <p>la date de fin d'exécution des soins n'est pas correct</p>
-              </div>
-            </div>
-
-            <div class="form_c_row_2">
-              <div class="form_input_c">
-                <label for="num_ps">N° PS prescripteur crypté<span>*</span></label>
-                <input id="motif_e" name="motif_e" type="text" placeholder="EX : EDFBDGFHFBGTPO34RFHGTYUD">
-                <p>Le numéro PS n n'est pas correct</p>
-              </div>
-              <div class="form_input_c">
-                <label for="nat">Nature de la prestation de référence<span>*</span></label>
-                <input id="nat" name="nat" type="number" placeholder="EX : 3429">
-                <p>Le code nature de la prestation n'est pas correct</p>
-              </div>
-            </div>
-
-            <div class="form_c_row_2">
-              <div class="form_input_c">
-                <label for="date_d">Date de mise à disposition des données<span>*</span></label>
-                <input id="date_d" name="date_d" type="date">
-                <p>La date de mise à disposition n'est pas correct</p>
-              </div>
-              <div class="form_input_c">
-                <label for="spe_nat">Spécialité ou nature d'activité du PS exécutant<span>*</span></label>
-                <input id="spe_nat" name="spe_nat" type="number" placeholder="EX : 343459829">
-                <p>La spécialité ou nature d'activité n'est pas correct</p>
-              </div>
-            </div>
-
-            <div class="form_c_row_2">
-              <div class="form_input_c">
-                <label for="top_b">Top bénéficiaire CMU Complémentaire<span>*</span></label>
-                <input id="top_b" name="top_b" type="text" placeholder="EX : A">
-                <p>Le top bénéficiaire n'est pas correct</p>
-              </div>
-              <div class="form_input_c">
-                <label for="date_pr">Date de prescription<span>*</span></label>
-                <input id="date_pr" name="date_pr" type="date">
-                <p>La date de prescription n'est pas correct</p>
-              </div>
-            </div>
-
-            <div class="form_c_row_1">
-              <div class="form_input_c">
-                <label for="q_ab">Quantité (signée) de l'acte de base<span>*</span></label>
-                <input id="q_ab" name="q_ab" type="number" placeholder="EX : 334">
-                <p>Le quantité (signée) de l'acte de base n'est pas correct</p>
-              </div>
-            </div>
-
-            <div class="form_c_button">
-              <button>Ajouter</button>
-            </div>
-
-          </form>
+        <div class="form_c" id="form_c">
+          
         </div>
 
       </div>
